# Lemon-Voxel-Engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml
docs/: ARCHITECTURE.md
examples/: cave_volume_avg.rs  headless_render_check.rs  is_solid_bench.rs  mesh_bench.rs  terrain_bench.rs  terrain_census.rs  tunnel_diagnostic.rs
src/: main.rs
src/engine/: config.rs  mod.rs
src/engine/core/: app.rs  mesher.rs  mod.rs
src/engine/render/: blur.rs  blur.wgsl  context.rs  cull.wgsl  cull_pipeline.rs  godray.rs  godray_compute.wgsl  godray_render.wgsl  gpu_timer.rs  hzb.rs  hzb_copy.wgsl  hzb_downsample.wgsl  mod.rs  pipeline.rs  renderer.rs  shader.wgsl  shadow.rs  shadow.wgsl  skybox.rs  skybox.wgsl  ssao.rs  ssao.wgsl  textures.rs
src/engine/render/hud/: font.rs  mod.rs  shader.wgsl
src/game/: mod.rs
src/game/input/: mod.rs
src/game/math/: camera.rs  cascades.rs  frustum.rs  mod.rs  sun.rs
src/game/physics/: mod.rs
src/game/world/: blocks.rs  chunk.rs  generator.rs  godrays.rs  manager.rs  mod.rs  raycast.rs  streamer.rs  terrain_grid.rs
src/game/world/generator/: flora.rs  lod.rs  pyramid.rs
