[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "30.0.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
pollster = "0.4"

glam = "0.33.2"

noiz = "0.5.0"
bevy_math = "0.19"

rayon = "1.12"
bytemuck = { version = "1.25", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
toml = "1.1"